--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,9 @@ build-iPhoneSimulator/
 
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
-# Gemfile.lock
+Gemfile.lock
+# Note: We include both in source control as we set up CI based on the specified version here.
+#       We _should_ modify the CI process so gem builds can go against an arbitrary Ruby version in the future.
 # .ruby-version
 # .ruby-gemset
 
@@ -54,3 +56,9 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+# Ignore for macOS systems
+.DS_Store
+
+# Jetbrains IDEs
+.idea/
