--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -30,3 +30,5 @@ jobs:
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Run tests
       run: bundle exec rake
+      env:
+        SNOWFLAKE_CONN_STR: "${{secrets.SNOWFLAKE_CONN_STR}}"
