--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -26,7 +26,9 @@ jobs:
     - name: Install unix-odbc
       run: sudo apt-get install unixodbc
     - name: Install Snowflake ODBC driver
-      run: curl https://sfc-repo.snowflakecomputing.com/odbc/linux/latest/snowflake-odbc-2.23.2.x86_64.deb -o snowflake_driver.deb && sudo dpkg -i snowflake_driver.deb
+      run: curl ${SNOWFLAKE_DRIVER_URL} -o snowflake_driver.deb && sudo dpkg -i snowflake_driver.deb
+      env:
+        SNOWFLAKE_DRIVER_URL: https://sfc-repo.snowflakecomputing.com/odbc/linux/latest/snowflake-odbc-2.23.2.x86_64.deb
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
